# spark_ingestion_framework

./: main.py
config/: file_ingestion.yaml
core/: audit.py  reader.py  reject_handler.py  transformer.py  validator.py
decorators/: yaml_table.py
ingestion_framework/: .gitignore  MANIFEST.in  README.md  databricks.yml  pyproject.toml  setup.py  setup_bundle.py
ingestion_framework/data_sources/: customers.yaml
ingestion_framework/examples/: ingest_customer.py
ingestion_framework/examples/asset_bundle/: databricks.yaml  generate_bundle_config.py
ingestion_framework/examples/asset_bundle/resources/: job_dev.yaml  job_prod.yaml  job_staging.yaml  pipeline_dev.yaml  pipeline_prod.yaml  pipeline_staging.yaml
ingestion_framework/examples/data_sources/: customers.yaml  events.yaml  orders.yaml  transactions.yaml
ingestion_framework/examples/setup/: 01_create_audit_table.sql
ingestion_framework/framework/: __init__.py
ingestion_framework/framework/core/: config.py  decorators.py  factory.py  notification_channel.py  registry.py  source_reader.py
ingestion_framework/framework/notifications/: __init__.py  email.py  factory.py  slack.py  teams.py
ingestion_framework/framework/readers/: __init__.py  base_file_reader.py  csv_reader.py  excel_reader.py
ingestion_framework/framework/utils/: archiver.py  audit.py
pipelines/: ingestion_pipeline.py
utils/: yaml_loader.py
